--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,7 @@
 /.gitattributes export-ignore
 /.gitignore export-ignore
+/docker-compose export-ignore
+/docker-compose.yml export-ignore
 /phpcs.xml.dist export-ignore
 /phpmd.xml export-ignore
 /phpunit.xml.dist export-ignore
