--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,6 @@
 /.gitattributes export-ignore
 /.gitignore export-ignore
+/.phpunit.result.cache export-ignore
 /docker-compose export-ignore
 /docker-compose.yml export-ignore
 /phpcs.xml.dist export-ignore
