--- a/composer.json
+++ b/composer.json
@@ -41,8 +41,8 @@
         "sebastian/phpcpd": "6.0.*",
         "squizlabs/php_codesniffer": "3.5.*",
         "zendframework/zend-modulemanager": "2.8.*",
-        "zendframework/zend-mvc": "3.1.*",
-        "zendframework/zend-servicemanager": "3.4.*"
+        "zendframework/zend-servicemanager": "3.4.*",
+        "laminas/laminas-mvc": "3.2.*"
     },
     "suggest": {
         "zendframework/zend-modulemanager": "Needed to load this package as Zend Framework module",
