--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,7 @@
         }
     },
     "require": {
-        "php": "^7.0",
+        "php": ">=7.4",
         "wandersonwhcr/romans": "1.3.*",
         "laminas/laminas-filter": "2.11.*",
         "laminas/laminas-hydrator": "4.1.*",
