--- a/composer.json
+++ b/composer.json
@@ -40,9 +40,9 @@
         "phpunit/phpunit": "9.5.*",
         "sebastian/phpcpd": "6.0.*",
         "squizlabs/php_codesniffer": "3.5.*",
-        "zendframework/zend-modulemanager": "2.8.*",
         "zendframework/zend-servicemanager": "3.4.*",
-        "laminas/laminas-mvc": "3.2.*"
+        "laminas/laminas-mvc": "3.2.*",
+        "laminas/laminas-modulemanager": "2.10.*"
     },
     "suggest": {
         "zendframework/zend-modulemanager": "Needed to load this package as Zend Framework module",
