Update Docker Compose usage

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,10 @@ version: "3.8"
 services:
 
   romans:
-    build: "./docker-compose"
+    build:
+      context: "./docker-compose"
+      args:
+        PHP_VERSION: "${PHP_VERSION:-8.0}"
     volumes:
     - ".:/app"
     user: "${UID:-1000}:${GID:-1000}"
