Disable PHP Actions

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,12 +17,17 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+      - name: Prepare
+        run: |
+          echo UID=`id -u` >> $GITHUB_ENV
+          echo GID=`id -g` >> $GITHUB_ENV
+      - name: Build
+        run: docker-compose build
+        env:
+          PHP_VERSION: ${{ matrix.php_version }}
       - name: Install
-        uses: php-actions/composer@v5
-        with:
-          php_version: ${{ matrix.php_version }}
+        run: docker-compose run romans composer install
       - name: Test
-        uses: php-actions/composer@v5
-        with:
-          php_version: ${{ matrix.php_version }}
-          command: test
+        run: docker-compose run romans composer test
+      - name: Clean
+        run: docker-compose down
